<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">yuzu</string>
    <string name="app_disclaimer">This software will run games for the Nintendo Switch game console. No game titles or keys are included.&lt;br /&gt;&lt;br /&gt;Before you begin, please locate your <![CDATA[<b> prod.keys </b>]]> file on your device storage.&lt;br /&gt;&lt;br /&gt;<![CDATA[<a href="https://yuzu-emu.org/help/quickstart">Learn more</a>]]></string>
    <string name="notice_notification_channel_name">Notices and errors</string>
    <string name="notice_notification_channel_id" translatable="false">noticesAndErrors</string>
    <string name="notice_notification_channel_description">Shows notifications when something goes wrong.</string>
    <string name="notification_permission_not_granted">Notification permission not granted!</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Learn how to setup &lt;b>yuzu&lt;/b> and jump into emulation.</string>
    <string name="get_started">Get started</string>
    <string name="keys">Keys</string>
    <string name="keys_description">Select your &lt;b>prod.keys&lt;/b> file with the button below.</string>
    <string name="select_keys">Select Keys</string>
    <string name="games">Games</string>
    <string name="games_description">Select your &lt;b>Games&lt;/b> folder with the button below.</string>
    <string name="done">Done</string>
    <string name="done_description">You\'re all set.\nEnjoy your games!</string>
    <string name="text_continue">Continue</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="add_games">Add Games</string>
    <string name="add_games_description">Select your games folder</string>
    <string name="step_complete">Complete!</string>
    <string name="home_games">Games</string>
    <string name="home_search">Search</string>
    <string name="home_settings">Settings</string>
    <string name="empty_gamelist">No files were found or no game directory has been selected yet.</string>
    <string name="search_and_filter_games">Search and filter games</string>
    <string name="select_games_folder">Select games folder</string>
    <string name="manage_game_folders">Manage game folders</string>
    <string name="select_games_folder_description">Allows yuzu to populate the games list</string>
    <string name="add_games_warning">Skip selecting games folder?</string>
    <string name="add_games_warning_description">Games won\'t be displayed in the Games list if a folder isn\'t selected.</string>
    <string name="add_games_warning_help">https://yuzu-emu.org/help/quickstart/#dumping-games</string>
    <string name="home_search_games">Search games</string>
    <string name="search_settings">Search settings</string>
    <string name="games_dir_selected">Games directory selected</string>
    <string name="install_prod_keys">Install prod.keys</string>
    <string name="install_prod_keys_description">Required to decrypt retail games</string>
    <string name="install_prod_keys_warning">Skip adding keys?</string>
    <string name="install_prod_keys_warning_description">Valid keys are required to emulate retail games. Only homebrew apps will function if you continue.</string>
    <string name="install_prod_keys_warning_help">https://yuzu-emu.org/help/quickstart/#guide-introduction</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Grant the notification permission with the button below.</string>
    <string name="give_permission">Grant permission</string>
    <string name="notification_warning">Skip granting the notification permission?</string>
    <string name="notification_warning_description">yuzu won\'t be able to notify you of important information.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_description">You denied this permission too many times and now you have to manually grant it in system settings.</string>
    <string name="about">About</string>
    <string name="about_description">Build version, credits, and more</string>
    <string name="warning_help">Help</string>
    <string name="warning_skip">Skip</string>
    <string name="warning_cancel">Cancel</string>
    <string name="install_amiibo_keys">Install Amiibo keys</string>
    <string name="install_amiibo_keys_description">Required to use Amiibo in game</string>
    <string name="invalid_keys_file">Invalid keys file selected</string>
    <string name="install_keys_success">Keys successfully installed</string>
    <string name="reading_keys_failure">Error reading encryption keys</string>
    <string name="install_prod_keys_failure_extension_description">Verify your keys file has a .keys extension and try again.</string>
    <string name="install_amiibo_keys_failure_extension_description">Verify your keys file has a .bin extension and try again.</string>
    <string name="invalid_keys_error">Invalid encryption keys</string>
    <string name="dumping_keys_quickstart_link">https://yuzu-emu.org/help/quickstart/#dumping-decryption-keys</string>
    <string name="install_keys_failure_description">The selected file is incorrect or corrupt. Please redump your keys.</string>
    <string name="gpu_driver_manager">GPU driver manager</string>
    <string name="install_gpu_driver">Install GPU driver</string>
    <string name="install_gpu_driver_description">Install alternative drivers for potentially better performance or accuracy</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advanced_settings_game">Advanced settings: %1$s</string>
    <string name="settings_description">Configure emulator settings</string>
    <string name="search_recently_played">Recently played</string>
    <string name="search_recently_added">Recently added</string>
    <string name="search_retail">Retail</string>
    <string name="search_homebrew">Homebrew</string>
    <string name="open_user_folder">Open yuzu folder</string>
    <string name="open_user_folder_description">Manage yuzu\'s internal files</string>
    <string name="theme_and_color_description">Modify the look of the app</string>
    <string name="no_file_manager">No file manager found</string>
    <string name="notification_no_directory_link">Could not open yuzu directory</string>
    <string name="notification_no_directory_link_description">Please locate the user folder with the file manager\'s side panel manually.</string>
    <string name="manage_save_data">Manage save data</string>
    <string name="manage_save_data_description">Save data found. Please select an option below.</string>
    <string name="import_save_warning">Import save data</string>
    <string name="import_save_warning_description">This will overwrite all existing save data with the provided file. Are you sure that you want to continue?</string>
    <string name="import_export_saves_description">Import or export save files</string>
    <string name="save_files_importing">Importing save files…</string>
    <string name="save_files_exporting">Exporting save files…</string>
    <string name="save_file_imported_success">Imported successfully</string>
    <string name="save_file_invalid_zip_structure">Invalid save directory structure</string>
    <string name="save_file_invalid_zip_structure_description">The first subfolder name must be the title ID of the game.</string>
    <string name="import_saves">Import</string>
    <string name="export_saves">Export</string>
    <string name="install_firmware">Install firmware</string>
    <string name="install_firmware_description">Firmware must be in a ZIP archive and is needed to boot some games</string>
    <string name="firmware_installing">Installing firmware</string>
    <string name="firmware_installed_success">Firmware installed successfully</string>
    <string name="firmware_installed_failure">Firmware installation failed</string>
    <string name="firmware_installed_failure_description">Make sure the firmware nca files are at the root of the zip and try again.</string>
    <string name="share_log">Share debug logs</string>
    <string name="share_log_description">Share yuzu\'s log file to debug issues</string>
    <string name="share_log_missing">No log file found</string>
    <string name="install_game_content">Install game content</string>
    <string name="install_game_content_description">Install game updates or DLC</string>
    <string name="installing_game_content">Installing content…</string>
    <string name="install_game_content_failure">Error installing file(s) to NAND</string>
    <string name="install_game_content_failure_description">Please ensure content(s) are valid and that the prod.keys file is installed.</string>
    <string name="install_game_content_failure_base">Installation of base games isn\'t permitted in order to avoid possible conflicts.</string>
    <string name="install_game_content_failure_file_extension">Only NSP and XCI content is supported. Please verify the game content(s) are valid.</string>
    <string name="install_game_content_failed_count">%1$d installation error(s)</string>
    <string name="install_game_content_success">Game content(s) installed successfully</string>
    <string name="install_game_content_success_install">%1$d installed successfully</string>
    <string name="install_game_content_success_overwrite">%1$d overwritten successfully</string>
    <string name="early_access">Early Access</string>
    <string name="get_early_access">Get Early Access</string>
    <string name="early_access_benefits">Early Access Benefits</string>
    <string name="cutting_edge_features">Cutting-edge features</string>
    <string name="early_access_updates">Early access to updates</string>
    <string name="no_manual_installation">No manual installation</string>
    <string name="prioritized_support">Prioritized support</string>
    <string name="helping_game_preservation">Helping game preservation</string>
    <string name="our_eternal_gratitude">Our eternal gratitude</string>
    <string name="are_you_interested">Are you interested?</string>
    <string name="invert_axis">Invert axis</string>
    <string name="invert_button">Invert button</string>
    <string name="toggle_button">Toggle button</string>
    <string name="turbo_button">Turbo button</string>
    <string name="set_threshold">Set threshold</string>
    <string name="toggle_axis">Toggle axis</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="select_gpu_driver_default">Default</string>
    <string name="preferences_settings">Settings</string>
    <string name="preferences_controls">Controls</string>
    <string name="per_game_settings">Per-game settings</string>
    <string name="emulation_exit">Exit emulation</string>
    <string name="emulation_fps_counter">FPS counter</string>
    <string name="emulation_thermal_indicator">Thermal indicator</string>
    <string name="emulation_toggle_controls">Toggle controls</string>
    <string name="emulation_rel_stick_center">Relative stick center</string>
    <string name="emulation_dpad_slide">D-pad slide</string>
    <string name="emulation_haptics">Touch haptics</string>
    <string name="emulation_show_overlay">Show overlay</string>
    <string name="emulation_control_adjust">Adjust overlay</string>
    <string name="emulation_touch_overlay_reset">Reset overlay</string>
    <string name="emulation_touch_overlay_edit">Edit overlay</string>
    <string name="emulation_pause">Pause emulation</string>
    <string name="emulation_input_overlay">Overlay options</string>
    <string name="touchscreen">Touchscreen</string>
</resources>