<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_toggle_fps"
        android:title="@string/emulation_fps_counter"
        android:checkable="true" />

    <item
        android:id="@+id/thermal_indicator"
        android:title="@string/emulation_thermal_indicator"
        android:checkable="true" />

    <item
        android:id="@+id/menu_edit_overlay"
        android:title="@string/emulation_touch_overlay_edit" />

    <item
        android:id="@+id/menu_adjust_overlay"
        android:title="@string/emulation_control_adjust" />

    <item
        android:id="@+id/menu_toggle_controls"
        android:title="@string/emulation_toggle_controls" />

    <item
        android:id="@+id/menu_show_overlay"
        android:title="@string/emulation_show_overlay"
        android:checkable="true" />

    <item
        android:id="@+id/menu_rel_stick_center"
        android:title="@string/emulation_rel_stick_center"
        android:checkable="true" />

    <item
        android:id="@+id/menu_dpad_slide"
        android:title="@string/emulation_dpad_slide"
        android:checkable="true" />

    <item
        android:id="@+id/menu_haptics"
        android:title="@string/emulation_haptics"
        android:checkable="true" />

    <item
        android:id="@+id/menu_touchscreen"
        android:title="@string/touchscreen"
        android:checkable="true" />

    <item
        android:id="@+id/menu_reset_overlay"
        android:title="@string/emulation_touch_overlay_reset" />

</menu>
