<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:paddingHorizontal="20dp"
    android:paddingVertical="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:gravity="start|center_vertical"
        android:textSize="17sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_layout"
        app:layout_constraintEnd_toStartOf="@+id/button_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="28dp"
        tools:text="My profile" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_new"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/create_new_profile"
            android:tooltipText="@string/create_new_profile"
            app:icon="@drawable/ic_new_label" />

        <Button
            android:id="@+id/button_delete"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:tooltipText="@string/delete"
            app:icon="@drawable/ic_delete" />

        <Button
            android:id="@+id/button_save"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            android:tooltipText="@string/save"
            app:icon="@drawable/ic_save" />

        <Button
            android:id="@+id/button_load"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/load"
            android:tooltipText="@string/load"
            app:icon="@drawable/ic_import" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
