<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_ea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:touchscreenBlocksFocus="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_about"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:touchscreenBlocksFocus="false"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/early_access" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_ea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="20dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:defaultFocusHighlightEnabled="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/card_ea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="32dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/premium_background"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/early_access_benefits"
                android:textAlignment="center"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cutting_edge_features"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/early_access_updates"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/no_manual_installation"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/prioritized_support"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/helping_game_preservation"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/our_eternal_gratitude"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start|center_vertical" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_interested"
                android:layout_marginTop="80dp"
                android:layout_marginHorizontal="20dp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:id="@+id/get_early_access_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="28dp"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@android:color/black">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_early_access"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="8dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAlignment="center" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
